--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "private": true,
     "dependencies": {
+        "framer-motion": "^10.12.16",
       "react": "^18.0.0",
       "react-dom": "^18.0.0",
       "react-router-dom": "^6.0.0",
