--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "private": true,
     "dependencies": {
-        "framer-motion": "^10.12.16",
+      "framer-motion": "^10.12.16",
       "react": "^18.0.0",
       "react-dom": "^18.0.0",
       "react-router-dom": "^6.0.0",
@@ -14,6 +14,12 @@
       "build": "react-scripts build",
       "test": "react-scripts test",
       "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+      "extends": ["react-app", "react-app/jest"]
+    },
+    "browserslist": {
+      "production": [">0.2%", "not dead", "not op_mini all"],
+      "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
     }
   }
-  
