--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
-  command = "npm run build"
+  command = "CI= npm run build"
   publish = "build"
+
+[build.environment]
+  NODE_VERSION = "18"
