--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "aspire-academics",
     "version": "1.0.0",
     "private": true,
+    "engines": {
+      "node": ">=18.0.0"
+    },
     "dependencies": {
       "framer-motion": "^10.12.16",
       "react": "^18.0.0",
