--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
       "@testing-library/jest-dom": "^5.16.5",
       "@testing-library/react": "^13.4.0",
       "@testing-library/user-event": "^13.5.0",
-      "web-vitals": "^2.1.4"
+      "web-vitals": "^2.1.4",
+      "@fortawesome/fontawesome-free": "^6.0.0",
+      "@fortawesome/react-fontawesome": "^0.2.0",
+      "@fortawesome/fontawesome-svg-core": "^6.0.0",
+      "@fortawesome/free-solid-svg-icons": "^6.0.0"
     },
     "scripts": {
       "start": "react-scripts start",
       "build": "react-scripts build",
+      "clean": "rm -rf build",
       "test": "react-scripts test",
       "eject": "react-scripts eject"
     },
