--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
       "@fortawesome/react-fontawesome": "^0.2.0",
       "@fortawesome/fontawesome-svg-core": "^6.0.0",
       "@fortawesome/free-solid-svg-icons": "^6.0.0",
-      "web-vitals": "^2.1.4"
+      "web-vitals": "^2.1.4",
+      "ajv": "^8.12.0"
     },
     "scripts": {
       "start": "react-scripts start",
+      "prebuild": "npm install ajv@8.12.0",
       "build": "CI=false react-scripts build",
       "test": "react-scripts test",
       "eject": "react-scripts eject"
