--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm ci && CI=false npm run build"
+  command = "npm install --legacy-peer-deps && CI=false npm run build"
   publish = "build"
 
 [build.environment]
