--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
       "@fortawesome/fontawesome-svg-core": "^6.0.0",
       "@fortawesome/free-solid-svg-icons": "^6.0.0",
       "web-vitals": "^2.1.4",
-      "ajv": "^8.12.0"
+      "ajv": "^6.12.6"
     },
     "scripts": {
       "start": "react-scripts start",
-      "prebuild": "npm install ajv@8.12.0",
+      "prebuild": "npm install ajv-keywords@3.5.2",
       "build": "CI=false react-scripts build",
       "test": "react-scripts test",
       "eject": "react-scripts eject"
