--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
       "@fortawesome/fontawesome-svg-core": "^6.0.0",
       "@fortawesome/free-solid-svg-icons": "^6.0.0",
       "web-vitals": "^2.1.4",
-      "ajv": "^6.12.6"
+      "ajv": "^6.12.6",
+      "nodemailer": "^6.9.1"
     },
     "scripts": {
       "start": "react-scripts start",
